--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- TAB REGISTROS -->
       <div class="tab-pane fade show active" id="registros">
         <div class="card p-4 mb-5">
-          <h4 class="text-primary mb-4">REGISTRAR NUEVO CARGAMENTO 🐔</h4>
+          <h4 class="text-primary mb-4">REGISTRAR INGRESOS 🐔</h4>
           <form id="formRegistro" class="row g-3 needs-validation" novalidate>
             <div class="col-md-4">
               <label class="form-label">CANTIDAD DE JABAS</label>
@@ -74,11 +74,10 @@
             <div>
               <button class="btn btn-primary mt-3" id="btnBuscarFecha">Buscar</button>
               <button class="btn btn-secondary mt-3 ms-2" id="btnLimpiarBusqueda">🧹 Limpiar</button>
-              <button class="btn btn-info mt-3 ms-2" id="btnImprimirRegistros">🖨️ Imprimir Registros</button>
+             <button id="btnImprimir" class="btn btn-secondary mt-3 ms-3"style="background-color: rebeccapurple; color: white;">🖨️ Imprimir Tabla</button>
+ 
             </div>
           </div>
-
-
           <div class="table-responsive">
             <table class="table table-bordered text-center align-middle">
               <thead>
